<resources>
    <string name="app_name">Todo App</string>
    <string name="login_title">Welcome!</string>
    <string name="login_message">Log in to get started</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account_message">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_message">It\'s totally free!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_account_message">Already have an account?</string>
    <string name="username_already_exist">Username already exist</string>
    <string name="user_created">User created!</string>
    <string name="invalid_login_message">Invalid username or password</string>
    <string name="logout">Logout</string>
    <string name="alert">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="create">Create</string>
    <string name="delete_task_message">Do you want to delete this task?</string>
</resources>